# goit-pythonweb-hw-10

./: README.md  pyproject.toml  seed.py
app/: config.py  main.py  repository.py
app/api/: auth.py  contacts.py  users.py
app/db/: db_connection.py  models.py
app/repository/: contacts.py
app/schemas/: contacts.py  users.py
app/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
migrations/: env.py
migrations/versions/: 78f3a4c71aa4_added_user_and_authentication.py  936f24dd2639_fixed_model_relationships.py  a4a2b3a5b1ea_add_role_to_users.py
