[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = [
    "Yelyzaveta Sheremet <elizabethsheremet@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.13.4,<3.0.0"
sqlalchemy = ">=2.0.50,<3.0.0"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
python-jose = "^3.5.0"
pydantic-settings = "^2.14.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
